# termigo

./: .lintstagedrc  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml  publish.yaml  test-on-pr.yaml
.husky/: pre-commit
src/: App.tsx  index.tsx  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/domain/: mod.rs  traits.rs
src-tauri/src/domain/future/: commands.rs  future_manager.rs  mod.rs
src-tauri/src/domain/gpt/: command.rs
src-tauri/src/domain/host/: commands.rs  event.rs  host.rs  lib.rs  mod.rs  models.rs  session.rs  session_manager.rs  ssh.rs  ssh_client.rs  terminal.rs
src-tauri/src/domain/identity/: command.rs  identity.rs  lib.rs  mod.rs  models.rs
src-tauri/src/domain/identity/services/: store_manager_impl.rs
src-tauri/src/domain/private_key/: command.rs  mod.rs  models.rs
src-tauri/src/domain/private_keys/: command.rs
src-tauri/src/domain/public_keys/: command.rs  lib.rs  mod.rs
src-tauri/src/domain/setting/: command.rs  event.rs  mod.rs  models.rs
src-tauri/src/domain/store/: enum.rs  mod.rs  store_manager.rs
src-tauri/src/infrastructure/: app.rs  error.rs  mod.rs  response.rs  transform.rs  updater.rs
src/core/: index.ts  invoker.ts  logger.ts
src/hooks/: global-shortcut.ts  use-toast.ts  utility.hooks.ts
src/interfaces/: host.ts  identity.ts  index.ts  (+3 more)
(+200 files in other folders)
