[package]
name = "termigo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "termigo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.3"
tauri-plugin-log = "2"
log = "0.4.22"
russh = "0.49.2"
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.83"
nanoid = "0.4.0"
tokio-util = "0.7.12"
tauri-plugin-store = "2"
url = "2.5.3"
async-openai = "0.26.0"
reqwest = "0.12.12"
hex = "0.4.3"
sha2 = "0.10.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
